Fixed overflow hidden

--- a/client/styles/bootstrap-extension.css
+++ b/client/styles/bootstrap-extension.css
@@ -6,7 +6,7 @@
     overflow: hidden !important;
 }
 
-.overflow-hidden {
+.overflow-scroll {
     overflow: scroll !important;
 }
 
